fixing width main wrap

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -65,7 +65,7 @@ header{
 /* MAIN WRAP */
 body{
   .main__wrap{
-  width:90%;
+  width:95%;
   position:relative;
   background:white;
   z-index:1;
